--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
 h1 {
   font-size: 1.25em;
   text-align: center;
